--- a/cityhacks/app/app.css
+++ b/cityhacks/app/app.css
@@ -19,3 +19,11 @@ components that have the btn class name.
 .btn {
     font-size: 18;
 }
+
+Page {
+    background-color: #BEBEBE;
+}
+
+.content {
+    padding: 12;
+}
